# ssdppy

./: README.md  pyproject.toml
.github/workflows/: python-ci.yaml  rust-ci.yaml
examples/: maxcut.py  random_sdp.py
ssdppy/: __init__.py  low_level.py
ssdppy/nystrom_sketch/: nystrom_sketch.py  test_low_level.py  test_nystrom_sketch.py
ssdppy/rand_lanczos/: rand_lanczos.py  test_random_lanczos.py
ssdppy/sketchy_cgal/: sketchy_cgal.py
ssdppy/sparse_sdp/: Cargo.toml  pyproject.toml  sparse_sdp.pyi
ssdppy/sparse_sdp/src/: errors.rs  lib.rs  sdp.rs  sdp_builder.rs  sdppy.rs
tests/: run_all.sh  test_sketchy_cgal.py  test_subroutines.py
